# sps-app-hysteresis

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CLAUDE.md  README.md  SPS.HYSTCOMP.MBI.json  build_ui.py  file  installed_packages.txt  pyproject.toml  test_acquisition.py  test_predict.py  test_scrolling_plot.py
.venv_hysteresis_app/: pip.conf  pyvenv.cfg
.venv_hysteresis_app/etc/cern-certifi/: certifi-and-cern.pem
docs/source/: api.rst  conf.py  index.rst
resources/ui/: main_window.ui  model_load_dialog.ui  plot_settings_widget.ui  prediction_analysis_widget.ui  prediction_history_widget.ui  reference_selector_dialog.ui
sps_app_hysteresis/: __main__.py  _rbac.py  _version.py  application.py  main_window.py
sps_app_hysteresis/contexts/: __init__.py  _base_context.py  _params.py
sps_app_hysteresis/history/: __init__.py  _history.py  _reference_cycles.py
sps_app_hysteresis/io/metrics/: __init__.py  _writer.py
sps_app_hysteresis/local/: __init__.py  _correction.py  _local_trim.py
sps_app_hysteresis/local/event_building/: _add_measurements.py  _add_programmed.py  _calculate_metrics.py
sps_app_hysteresis/local/track_precycle/: SPS.USER.LHCPILOT.parquet  _track_precycle.py
sps_app_hysteresis/local/trim/: __init__.py  _settings.py
sps_app_hysteresis/pipeline/: __init__.py  _data_flow.py  _pipeline.py  _remote.py  _standalone.py
sps_app_hysteresis/settings/: __init__.py  trim_settings.py
sps_app_hysteresis/standalone/: __init__.py  _correction.py  _correction_refactored.py  _inference.py  _inference_refactored.py  _local_trim.py  _local_trim_refactored.py
sps_app_hysteresis/standalone/event_building/: __init__.py  _add_measurement_reference.py  _add_measurements.py  _add_measurements_cycle_stamped.py  _add_programmed.py  _buffer_builder.py  _create_cycle.py  _event_builder_abc.py  _track_fulleco.py
sps_app_hysteresis/standalone/track_precycle/: _track_precycle.py
sps_app_hysteresis/utils/: __init__.py  _threadutil.py  _ui.py  plotting.py
sps_app_hysteresis/widgets/: __init__.py
sps_app_hysteresis/widgets/history_widget/: __init__.py  _cycle_model.py  _dataclass.py  _model.py  _plot_adapter.py  _plot_model.py  _unified_model.py  _view.py  _widget.py
sps_app_hysteresis/widgets/plot_settings_widget/: _model.py  _view.py
sps_app_hysteresis/widgets/plot_widget/: _model.py  _view.py
sps_app_hysteresis/widgets/trim_widget/: __init__.py  _model.py  _view.py
sps_apps/hysteresis_prediction/: _data_flow.py  _metadata.py  _rbac.py  application.py  main_window.py
sps_apps/hysteresis_prediction/async/: __init__.py  _async.py
sps_apps/hysteresis_prediction/async_utils/: __init__.py  _async.py
sps_apps/hysteresis_prediction/contexts/: __init__.py  _base_context.py  _params.py
sps_apps/hysteresis_prediction/core/: application_context.py
sps_apps/hysteresis_prediction/data/: __init__.py  _acquisition.py  _acquisition_buffer.py  _add_measurement_reference.py  _add_measurements.py  _add_measurements_cycle_stamped.py  _add_programmed.py  _buffer.py  _buffer_builder.py  _create_cycle.py  _cycle_to_tgm.py  _dataclass.py  _event_builder_abc.py  _pyda.py  _pyjapc.py  _start_cycle.py  _track_dyneco.py  _track_fulleco.py
sps_apps/hysteresis_prediction/flow/: __init__.py  _data_flow.py  _local.py  _ucap.py
sps_apps/hysteresis_prediction/history/: __init__.py  _history.py  _list_model.py  _reference_cycles.py
sps_apps/hysteresis_prediction/inference/: __init__.py  _correction.py  _inference.py
sps_apps/hysteresis_prediction/io/: __init__.py  _io.py
sps_apps/hysteresis_prediction/io/metrics/: _writer.py
sps_apps/hysteresis_prediction/local/: __init__.py  _correction.py  _inference.py  _local_trim.py
sps_apps/hysteresis_prediction/local/event_building/: __init__.py  _add_measurement_reference.py  _add_measurements.py  _add_programmed.py  _buffer.py  _calculate_metrics.py  _event_builder_abc.py  _track_dyneco.py  _track_reference_changed.py
sps_apps/hysteresis_prediction/local/track_precycle/: SPS.USER.MD1.parquet  __init__.py  _track_precycle.py
sps_apps/hysteresis_prediction/settings/: __init__.py  app_context.py  app_settings.py
sps_apps/hysteresis_prediction/signals/: __init__.py
sps_apps/hysteresis_prediction/signals/track_precycle/: __init__.py  _track_precycle.py
sps_apps/hysteresis_prediction/trim/: __init__.py  _cycle_metadata.py  _local_trim.py  _settings.py
sps_apps/hysteresis_prediction/utils/: __init__.py  _threadutil.py  _time.py  _trim.py  _ui.py
sps_apps/hysteresis_prediction/widgets/: __init__.py  _widgets.py  status_tracker.py
sps_apps/hysteresis_prediction/widgets/history_widget/: __init__.py  _model.py  _plot_model.py  _view.py  _widget.py
sps_apps/hysteresis_prediction/widgets/model_load_dialog/: __init__.py  _dialog.py
sps_apps/hysteresis_prediction/widgets/plot_settings_widget/: __init__.py  _model.py  _status.py  _view.py
sps_apps/hysteresis_prediction/widgets/plot_widget/: __init__.py  _model.py  _sources.py  _view.py
sps_apps/hysteresis_prediction/widgets/prediction_analysis_widget/: __init__.py  _color_pool.py  _dataclass.py  _list_model.py  _model.py  _plot_model.py  _view.py
sps_apps/hysteresis_prediction/widgets/trim_widget/: __init__.py  _model.py  _view.py
test_scripts/: test_acquisition.py  test_predict.py  test_prediction_analysis_widget.py  test_scrolling_plot.py
tests/: SFTPRO1-MD1-SFTPRO1-AWAKE1-MD1.parquet  conftest.py  test_hysteresis_prediction.py  test_send_trim.py  test_track_precycle.py
