[build-system]
requires = ["setuptools >= 61", "setuptools-scm[toml] ~= 6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sps-app-hysteresis"
authors = [{ name = "Anton Lu", email = "anton.lu@cern.ch" }]
dynamic = ["version", "readme"]
description = "GUI for predicting the magnetic field based on measured and programmed current in the SPS"
license = { text = "Other/Proprietary License" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.11"
dependencies = [
    "accwidgets[graph] ~= 3.0",
    "matplotlib ~= 3.8",
    "numpy ~= 1.26",
    "pjlsa ~= 0.2",
    "pytorch-lightning ~= 2.0",
    "pyrbac ~= 1.1",
    "pyda ~= 0.4",
    "pyda-japc ~= 0.3",
    "pyda-lsa ~= 0.4",
    "PyQt5 ~= 5.12",
    "rich ~ 13.7",
    "QtPy ~= 2.4",
    "scipy ~= 1.12",
    "scikit-learn ~= 1.4",
    "torch ~= 2.2",
    "transformertf ~= 0.0.16",
    "hysteresis-scripts ~= 0.0.2",
    "op-app-context ~= 0.1",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
doc = ["acc-py-sphinx", "myst-parser", "sphinx-copybutton"]
dev = ["pre-commit", "ruff", "mypy"]

[project.urls]
homepage = "https://gitlab.cern.ch/dsb/applications/sps-app-hysteresis"
documentation = "https://acc-py.web.cern.ch/gitlab/dsb/applications/sps-app-hysteresis/docs/stable/"
repository = "https://gitlab.cern.ch/dsb/applications/sps-app-hysteresis"
changelog = "https://gitlab.cern.ch/dsb/applications/sps-app-hysteresis"

# keep this for dynamic versioning
[tool.setuptools_scm]
write_to = "sps_apps/hysteresis_prediction/_version.py"
local_scheme = "no-local-version"

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools.packages.find]
include = ["sps_apps.hysteresis_prediction*"]
namespaces = true
exclude = ["tests", "tests.*", "build"]


[project.scripts]
app-hysteresis = "sps_apps.hysteresis_prediction.application:main"

[tool.black]
target-version = ["py311"]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | .*/generated/*
)/
'''

[tool.ruff]

fixable = [
    "A",
    "B",
    "C",
    "D",
    "E",
    "F",
    "G",
    "I",
    "N",
    "Q",
    "S",
    "T",
    "W",
    "ANN",
    "ARG",
    "BLE",
    "COM",
    "DJ",
    "DTZ",
    "EM",
    "ERA",
    "EXE",
    "FBT",
    "ICN",
    "INP",
    "ISC",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
exclude = [
    "sps_apps/hysteresis_prediction/generated",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

line-length = 79
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"


target-version = "py39"

[tool.ruff.mccabe]
max-complexity = 10

[tool.mypy]
disallow_untyped_defs = true
plugins = "numpy.typing.mypy_plugin"

[[tool.mypy.overrides]]
module = [
    "jpype.*",
    "matplotlib.*",
    "pjlsa.*",
    "scipy.*",
    # "pyda.*",
    "pyrbac.*",
]
ignore_missing_imports = true

[tool.pyright]
reportPrivateImportUsage = "none"
