[build-system]
requires = ["setuptools >= 61", "setuptools-scm[toml] ~= 6.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sps-app-hysteresis"
authors = [{ name = "Anton Lu", email = "anton.lu@cern.ch" }]
dynamic = ["version", "readme"]
description = "GUI for predicting the magnetic field based on measured and programmed current in the SPS"
license = { text = "Other/Proprietary License" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.11"
dependencies = [
    "accwidgets[all-widgets] >= 5.0, < 6.0",
    "matplotlib >= 3.8",
    "numpy >= 1.26, < 2.0",
    "pjlsa >= 0.2",
    "lightning ~= 2.2.2",
    "cern-mlp-client ~= 1.0",
    "pyrbac >= 1.1, < 2.0",
    "pyda >= 1.0, < 2.0",
    "pyda-japc >= 1.0, < 2.0",
    "pyda-lsa >= 1.0, < 2.0",
    "PyQt6 ~= 6.0",
    "rich >= 13.7",
    "QtPy ~= 2.4",
    "scipy >= 1.12",
    "scikit-image > 0.25",
    "scikit-learn >= 1.4",
    "torch ~= 2.5.1",
    "sps-mlp-hysteresis-compensation ~= 0.8",
    "hystcomp-utils >= 0.3.1, < 1.0",
    "op-app-context >= 0.1, < 1.0",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
doc = ["acc-py-sphinx", "myst-parser", "sphinx-copybutton"]
dev = ["pre-commit", "ruff", "mypy"]

[project.urls]
homepage = "https://gitlab.cern.ch/dsb/applications/sps-app-hysteresis"
documentation = "https://acc-py.web.cern.ch/gitlab/dsb/applications/sps-app-hysteresis/docs/stable/"
repository = "https://gitlab.cern.ch/dsb/applications/sps-app-hysteresis"
changelog = "https://gitlab.cern.ch/dsb/applications/sps-app-hysteresis"

# keep this for dynamic versioning
[tool.setuptools_scm]
write_to = "sps_app_hysteresis/_version.py"
local_scheme = "no-local-version"

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools.packages.find]
include = ["sps_app_hysteresis*"]
exclude = ["tests", "tests.*", "build"]


[project.scripts]
app-hysteresis = "sps_app_hysteresis.application:main"

[tool.black]
target-version = ["py311"]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | .*/generated/*
)/
'''

[tool.ruff]

exclude = [
    "sps_app_hysteresis/generated",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

line-length = 88
target-version = "py311"

preview = true
unsafe-fixes = true

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
select = [
    "F",   # pyflakes
    "E",   # error  (pycodestyle)
    "W",   # warning (pycodestyle)
    "I",   # isort
    "N",   # naming  (pep8)
    "UP",  # pyupgrade
    "PLC", # convention  (pylint)
    "PLE", # error  (pylint)
    "PLW", # warning  (pylint)
    # "D",  # docstring (pydocstyle),  # not enabled by default
    "PD",   # pandas
    "TRY",  # tryceratops
    "NPY",  # numpy
    "PERF", # perflint
    "RUF",  # ruff
    # v flake8 v
    "B",
    "C4",
    "FBT",
    "A",
    "EM",
    "ISC",
    "FA",
    "G",
    "PIE",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SLF",
    "SIM",
]
fixable = ["ALL"]
ignore = [
    "E501",
    "W505",
    "ISC001",
    "PD901",
    "PLW2901",
    "N812",
    "N806",
    "G003",
    "G004",
    "N815",
    "N802",
]

[tool.ruff.format]
preview = true

[tool.mypy]
disallow_untyped_defs = true
plugins = "numpy.typing.mypy_plugin"

[[tool.mypy.overrides]]
module = [
    "jpype.*",
    "matplotlib.*",
    "pjlsa.*",
    "scipy.*",
    # "pyda.*",
    "pyrbac.*",
]
ignore_missing_imports = true

[tool.pyright]
reportPrivateImportUsage = "none"
reportGeneralTypeIssues = "none"
reportAttributeAccessIssues = "none"
reportArgumentType = "none"
reportReturnType = "none"
